fix(css/): trying to remove overflow

--- a/css/index.css
+++ b/css/index.css
@@ -178,7 +178,7 @@
 
 .footer{
     height: 100%;
-    
+
     font-size: clamp(0.8em, 2vw, 1em);
     font-family: var(--ff-roboto);
     font-weight: 400;
@@ -194,4 +194,6 @@
     
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
+
+    overflow-x: hidden;
 }
