--- a/css/out.css
+++ b/css/out.css
@@ -182,7 +182,7 @@
 
 .footer{
     height: 100%;
-    
+
     font-size: clamp(0.8em, 2vw, 1em);
     font-family: var(--ff-roboto);
     font-weight: 400;
@@ -198,4 +198,6 @@
     
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
+
+    overflow-x: hidden;
 }
